native/wdsp/wdsp.h

extern void SnapSpectrumTimeout(  int disp,
                                  int ss,
                                  int LO,
                                  double* snap_buff,
                                  DWORD timeout,
                                  int* flag);
extern void SetCalibration (  int disp,
                              int set_num,
                              int n_points,
                              double (*cal)[dMAX_M + 1]
                           );
//
// Interfaces from anf.c
//

extern void SetRXAANFRun (int channel, int run);
extern void SetRXAANFVals (int channel, int taps, int delay, double gain, double leakage);
extern void SetRXAANFPosition (int channel, int position);
//
// Interfaces from anr.c
//

extern void SetRXAANRRun (int channel, int run);
extern void SetRXAANRVals (int channel, int taps, int delay, double gain, double leakage);
extern void SetRXAANRPosition (int channel, int position);
//
// Interfaces from dexp.c
//

extern void create_dexp (int id, int run_dexp, int size, double* in, double* out, int rate, double dettau,
                         double tattack, double tdecay,
                         double thold, double exp_ratio, double hyst_ratio, double attack_thresh, int nc, int wtype, double lowcut,
                         double highcut,
                         int run_filt, int run_vox, int run_audelay, double audelay, void (__stdcall *pushvox)(int id, int active),
                         int antivox_run, int antivox_size, int antivox_rate, double antivox_gain, double antivox_tau);
extern void SendCBPushDexpVox (int id, void (__stdcall *pushvox)(int id, int active));
//
// Interfaces from emnr.c
//

extern void SetRXAEMNRpost2Run(int channel, int run);
extern void SetRXAEMNRpost2Factor(int channel, double factor);
extern void SetRXAEMNRpost2Nlevel(int channel, double nlevel);
extern void SetRXAEMNRpost2Taper(int channel, int taper);
extern void SetRXAEMNRpost2Rate(int channel, double tc);
extern void SetRXAEMNRRun (int channel, int run);
extern void SetRXAEMNRgainMethod (int channel, int method);
extern void SetRXAEMNRnpeMethod (int channel, int method);
extern void SetRXAEMNRaeRun (int channel, int run);
extern void SetRXAEMNRPosition (int channel, int position);
extern void SetRXAEMNRaeZetaThresh (int channel, double zetathresh);
extern void SetRXAEMNRaePsi (int channel, double psi);
extern void SetRXAEMNRtrainZetaThresh(int channel, double thresh);
extern void SetRXAEMNRtrainT2(int channel, double t2);
//
// Interfaces from iobuffs.c
//

extern void fexchange0 (int channel, double* in, double* out, int* error);
extern void RXANBPSetNotchesRun (int channel, int run);
extern void create_anbEXT (
  int id,
  int run,
  int buffsize,
  double samplerate,
  double tau,
  double hangtime,
  double advtime,
  double backtau,
  double threshold
);
extern void destroy_anbEXT (int id);
extern void flush_anbEXT (int id);
extern void xanbEXT (int id, double* in, double* out);
extern void SetEXTANBRun (int id, int run);
extern void SetEXTANBBuffsize (int id, int size);
extern void SetEXTANBSamplerate (int id, int rate);
extern void SetEXTANBTau (int id, double tau);
extern void SetEXTANBHangtime (int id, double time);
extern void SetEXTANBAdvtime (int id, double time);
extern void SetEXTANBBacktau (int id, double tau);
extern void SetEXTANBThreshold (int id, double thresh);
extern void create_nobEXT (
  int id,
  int run,
  int mode,
  int buffsize,
  double samplerate,
  double slewtime,
  double hangtime,
  double advtime,
  double backtau,
  double threshold
);
extern void destroy_nobEXT (int id);
extern void flush_nobEXT (int id);
extern void xnobEXT (int id, double* in, double* out);
extern void SetEXTNOBRun (int id, int run);
extern void SetEXTNOBMode (int id, int mode);
extern void SetEXTNOBBuffsize (int id, int size);
extern void SetEXTNOBSamplerate (int id, int rate);
extern void SetEXTNOBTau (int id, double tau);
//
// Interfaces from sbnr.c
//

extern void SetRXASBNRRun (int channel, int run);
extern void SetRXASBNRreductionAmount (int channel, float amount);
extern void SetRXASBNRsmoothingFactor (int channel, float factor);
extern void SetRXASBNRwhiteningFactor (int channel, float factor);
extern void SetRXASBNRnoiseRescale (int channel, float factor);
extern void SetRXASBNRpostFilterThreshold (int channel, float threshold);
extern void SetRXASBNRnoiseScalingType(int channel, int noise_scaling_type);
extern void SetRXASBNRPosition(int channel, int position);
//
// Interfaces from snb.c
//

extern void SetRXASNBARun (int channel, int run) ;