Zeus.Dsp/Wdsp/NativeMethods.cs


    // SnapSpectrumTimeout — pulls a raw complex FFT snapshot (Re/Im interleaved
    // doubles) from the analyzer identified by (disp, ss, LO). Blocks up to
    // timeoutMs milliseconds for a fresh frame. flag is set to 1 on success,
    // 0 on timeout. analyzer.c:1633.
    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SnapSpectrumTimeout(
        int disp,
        int ss,
        int LO,
        ref double snap_buff,
        uint timeoutMs,
        ref int flag);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void fexchange0(
        int channel,
        ref double inInterleavedIq,
        ref double outInterleavedAudio,
        out int error);

    // Noise reduction (post-RXA surface — mirrors the exact subset Thetis exposes).

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetRXAANRRun(int channel, int run);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetRXAANRVals(int channel, int taps, int delay, double gain, double leakage);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetRXAANRPosition(int channel, int position);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetRXAANFRun(int channel, int run);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetRXAANFVals(int channel, int taps, int delay, double gain, double leakage);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetRXAANFPosition(int channel, int position);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetRXAEMNRRun(int channel, int run);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetRXAEMNRPosition(int channel, int position);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetRXAEMNRgainMethod(int channel, int method);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetRXAEMNRnpeMethod(int channel, int method);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetRXAEMNRaeRun(int channel, int run);

    // Auto-enhancement tuning. emnr.c:1415,1422 — both take double. Not exposed
    // in Thetis UI; defaults inside create_emnr() apply unless overridden.
    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetRXAEMNRaeZetaThresh(int channel, double zetathresh);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetRXAEMNRaePsi(int channel, double psi);

    // EMNR post-processing (post2). Comfort-noise injection that masks
    // residual EMNR artifacts — the psychoacoustic mechanism behind Thetis's
    // smoother-sounding NR2 hiss. emnr.c:1026,1033,1040,1047,1056. Run/Taper
    // are int; Factor/Nlevel/Rate are double.
    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetRXAEMNRpost2Run(int channel, int run);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetRXAEMNRpost2Factor(int channel, double factor);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetRXAEMNRpost2Nlevel(int channel, double nlevel);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetRXAEMNRpost2Taper(int channel, int taper);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetRXAEMNRpost2Rate(int channel, double tc);

    // EMNR Trained gain-method tuning. emnr.c:1429,1436. T1 is the dB threshold
    // against the trained zetaHat lookup table; T2 is a secondary suppression
    // threshold. Only consulted by WDSP when SetRXAEMNRgainMethod=3 (Trained),
    // but writing them is harmless either way.
    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetRXAEMNRtrainZetaThresh(int channel, double thresh);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetRXAEMNRtrainT2(int channel, double t2);

    // SBNR (NR4) — libspecbleach spectral-bleaching NR. Symbols defined in
    // native/wdsp/sbnr.c with the float / int signatures shown here.
    // IMPORTANT: requires libwdsp rebuild — Phase 1 of issue #79; the
    // bundled binaries shipped today do NOT export these symbols, so any
    // call here will fail with EntryPointNotFoundException at runtime.
    // The engine guards SBNR-on against the missing library; tests that
    // try to actually flip Sbnr Run=1 are [Skip]'d until Phase 1 lands.
    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetRXASBNRRun(int channel, int run);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetRXASBNRPosition(int channel, int position);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetRXASBNRreductionAmount(int channel, float amount);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetRXASBNRsmoothingFactor(int channel, float factor);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetRXASBNRwhiteningFactor(int channel, float factor);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetRXASBNRnoiseRescale(int channel, float factor);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetRXASBNRpostFilterThreshold(int channel, float threshold);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetRXASBNRnoiseScalingType(int channel, int noise_scaling_type);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetRXASNBARun(int channel, int run);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void RXANBPSetNotchesRun(int channel, int run);

    // NB1 (EXTANB) — pre-RXA time-domain noise blanker. Setters dereference
    // panb[id] so create_anbEXT MUST be called before any SetEXTANB*/xanbEXT.
    // Buffsize is complex samples (matches WDSP InSize), not doubles.
    [LibraryImport(LibraryName, EntryPoint = "create_anbEXT")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void CreateAnbEXT(
        int id,
        int run,
        int buffsize,
        double samplerate,
        double tau,
        double hangtime,
        double advtime,
        double backtau,
        double threshold);

    [LibraryImport(LibraryName, EntryPoint = "destroy_anbEXT")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void DestroyAnbEXT(int id);

    [LibraryImport(LibraryName, EntryPoint = "flush_anbEXT")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void FlushAnbEXT(int id);

    [LibraryImport(LibraryName, EntryPoint = "xanbEXT")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void XanbEXT(int id, ref double @in, ref double @out);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetEXTANBRun(int id, int run);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetEXTANBBuffsize(int id, int size);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetEXTANBSamplerate(int id, int rate);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetEXTANBTau(int id, double tau);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetEXTANBHangtime(int id, double time);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetEXTANBAdvtime(int id, double time);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetEXTANBBacktau(int id, double tau);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetEXTANBThreshold(int id, double thresh);

    // NB2 (EXTNOB) — pre-RXA impulse-sequence blanker. Same ordering rule as
    // EXTANB: create_nobEXT before any SetEXTNOB*/xnobEXT. create_nobEXT's
    // `slewtime` parameter is applied to both adv_slewtime and hang_slewtime
    // inside wdsp (see nobII.c:636-637).
    [LibraryImport(LibraryName, EntryPoint = "create_nobEXT")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void CreateNobEXT(
        int id,
        int run,
        int mode,
        int buffsize,
        double samplerate,
        double slewtime,
        double hangtime,
        double advtime,
        double backtau,
        double threshold);

    [LibraryImport(LibraryName, EntryPoint = "destroy_nobEXT")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void DestroyNobEXT(int id);

    [LibraryImport(LibraryName, EntryPoint = "flush_nobEXT")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void FlushNobEXT(int id);

    [LibraryImport(LibraryName, EntryPoint = "xnobEXT")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void XnobEXT(int id, ref double @in, ref double @out);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetEXTNOBRun(int id, int run);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetEXTNOBMode(int id, int mode);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetEXTNOBBuffsize(int id, int size);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetEXTNOBSamplerate(int id, int rate);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetEXTNOBTau(int id, double tau);
